fixed overflowing text in header

--- a/app/src/js/components/FormQuestions/FormQuestions.css
+++ b/app/src/js/components/FormQuestions/FormQuestions.css
@@ -1137,6 +1137,7 @@
   color: #fff;
   z-index: 5;
   max-width: 80px;
+  border: none;
 }
 
 .table-wrapper {
